lib_LIBRARIES = libSELF.a

AM_FCFLAGS = $(HDF5_FFLAGS)
AM_LDFLAGS = $(HDF5_LDFLAGS)
AM_CPPFLAGS = $(HDF5_CPPLAGS)

DISTCLEANFILES = modelprecision.mod constantsdictionary.mod commonroutines.mod linkedlist_class.mod hashtable_class.mod keyring_class.mod timing.mod equationparser_class.mod quadrature.mod lagrange_class.mod nodaldg_class.mod spectralfilter_class.mod modelparameters_class.mod geom_equationparser_class.mod surfaces_class.mod nodes_class.mod edges_class.mod faces_class.mod hexelements_class.mod hexmesh_class.mod nodaldgsolution_3d_class.mod mpilayer_class.mod

include_HEADERS = modelprecision.mod constantsdictionary.mod commonroutines.mod linkedlist_class.mod hashtable_class.mod keyring_class.mod timing.mod equationparser_class.mod quadrature.mod lagrange_class.mod nodaldg_class.mod spectralfilter_class.mod modelparameters_class.mod geom_equationparser_class.mod surfaces_class.mod nodes_class.mod edges_class.mod faces_class.mod hexelements_class.mod hexmesh_class.mod nodaldgsolution_3d_class.mod mpilayer_class.mod self_macros.h

libSELF_a_SOURCES = ModelPrecision.F90 ConstantsDictionary.F90 CommonRoutines.F90 LinkedList_Class.F90 HashTable_Class.F90 KeyRing_Class.F90 Timing.F90 EquationParser_Class.F90 Quadrature.F90 Lagrange_Class.F90 NodalDG_Class.F90 SpectralFilter_Class.F90 ModelParameters_Class.F90 Geom_EquationParser_Class.F90 Surfaces_Class.F90 Nodes_Class.F90 Edges_Class.F90 Faces_Class.F90 HexElements_Class.F90 HexMesh_Class.F90 NodalDGSolution_3D_Class.F90 MPILayer_Class.F90
