noinst_LIBRARIES = libSELF.a

libSELF_a_SOURCES = ModelPrecision.f90 ConstantsDictionary.f90 CommonRoutines.f90 LinkedList_Class.f90 HashTable_Class.f90 KeyRing_Class.f90 Timing.f90 EquationParser_Class.f90 Quadrature.f90 Lagrange_Class.f90 NodalDG_Class.f90 SpectralFilter_Class.f90 ModelParameters_Class.f90 Geom_EquationParser_Class.f90 Surfaces_Class.f90 Nodes_Class.f90 Edges_Class.f90 Faces_Class.f90 BoundaryCommunicator_Class.f90 HexElements_Class.f90 HexMesh_Class.f90 NodalDGSolution_3D_Class.f90
