noinst_LIBRARIES = libSELF.a

libSELF_a_SOURCES = ModelPrecision.F90 ConstantsDictionary.F90 CommonRoutines.F90 LinkedList_Class.F90 HashTable_Class.F90 KeyRing_Class.F90 Timing.F90 EquationParser_Class.F90 Quadrature.F90 Lagrange_Class.F90 NodalDG_Class.F90 SpectralFilter_Class.F90 ModelParameters_Class.F90 Geom_EquationParser_Class.F90 Surfaces_Class.F90 Nodes_Class.F90 Edges_Class.F90 Faces_Class.F90 BoundaryCommunicator_Class.F90 HexElements_Class.F90 HexMesh_Class.F90 NodalDGSolution_3D_Class.F90 MPILayer_Class.F90
